# grim-opt

./: README.md  pyproject.toml
environment/: environment.yml  requirements.txt
example-experiments/000-default/: config.yaml  regions_numbered.csv
example-experiments/000-default/inputs/: electricity_demand__medium.csv  electricity_gencap_existing.xlsx  electricity_gencap_factors_new_solar.csv  electricity_transcap_connections.csv  parameters_techno_econ.xlsx  polygons__veluwe_simplified.geojson  region_names.csv  regions_numbered.csv
example-experiments/000-default/outputs/: clc_legend_new.xls  optimized_gencap_x%_renew.csv  optimized_transcap_x%_renew.csv  region_area_generation.csv  region_area_land_cover_classes.csv
src/grim_opt/: cli_app.py  config.py  config_defaults.py  config_parse.py  helpers.py  land_cover.py  optimization.py  path_helpers.py  plot_capacities_regions.py  plot_capacities_totals.py
